cmake_minimum_required(VERSION 3.12)
project(GrapheneUI VERSION 0.0.1)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_GENERATOR_TOOLSET "MinGW Makefiles")
include_directories(
    ${PROJECT_BINARY_DIR}/../include
    ${PROJECT_BINARY_DIR}/../src
)

file(GLOB LIB_SOURCES "${PROJECT_SOURCE_DIR}/cpp/*.cpp")
file(GLOB LIB_HEADERS "${PROJECT_SOURCE_DIR}/include/*.h")

add_library(GrapheneUILib SHARED ${LIB_SOURCES} ${LIB_HEADERS})
target_include_directories(GrapheneUILib PUBLIC
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/cpp
)

set(LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../bin)